# rag_system

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: download_models.py  evaluate.py  install.sh  setup_db.sql
src/: config.py  logging_config.py
src/api/: dependencies.py  llm.py  main.py  rag.py  reranker.py  routes.py  schemas.py
src/api/prompts/: rag_template.txt
src/api/services/: __init__.py  history_service.py
src/convert/: __init__.py  cli.py  html2md.py
src/db/: models.py  session.py
src/ingestion/: __init__.py  chunking.py  cli.py  dedup.py  embedding.py  pipeline.py
src/web/: manage.py
src/web/app/: settings.py  urls.py
src/web/history/: admin.py  models.py  urls.py  views.py
src/web/templates/: base.html
src/web/templates/auth/: login.html
src/web/templates/history/: history_detail.html  history_list.html  home.html
systemd/: rag-api.service  rag-web.service
tests/: conftest.py  test_api.py  test_chunker.py
