[project]
name = "rag-docs-system"
version = "0.1.0"
description = "RAG Q&A system for technical documentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "django>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.0",
    "FlagEmbedding>=1.2.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "openai>=1.10.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "markdownify>=0.11.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "gunicorn>=21.2.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.5.0",
    "lxml_html_clean>=0.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest-mock>=3.12.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
html2md = "src.convert.cli:main"
ingest = "src.ingestion.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["src/web/history/models.py"]
